# BinanceClient

src/: CMakeLists.txt  ReadMe.md  main.cpp
src/CSVWriter/: CSVWriter.cpp  CSVWriter.hpp
src/Files/: orderbook_l2.csv  ticker.csv  trades.csv
src/OrderBook/: OrderBook.cpp  OrderBook.hpp
